# CytoHMM

./: .gitignore  README.md  setup.cfg  setup.py
hidden_markov/: __init__.py
src/: .gitignore
src/cytohmm/: likelihood.pyx  markov_chain.pyx  sequence_segmenter.py
