# https://github.com/harry-zuzan/CytoHMM/

[metadata]
name = cytohmm
version = 0.1.0
description = Cytogenetics hidden Markov model
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/harry-zuzan/CytoHMM
author = Harry Zuzan
license = MIT

keywords = hidden Markov model, cytogenetics

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Cython


[options]
zip_safe = False
python_requires = >=3.6, <4
install_requires =
    numpy
    cython


#	package_dir={'cytohmm': 'src/cytohmm'},
#	ext_modules = cythonize(extensions),
#	setup_requires=['numpy','cython'],
#	packages=['cytohmm',],
##	package_dir={'','src'},
